# face_uvmap_cpp

./: CMakeLists.txt  README.ja.md  README.md
include/: face_uvmap_cpp.hpp
src/: face_uvmap_cpp.cpp
tests/: test_uvmap.cpp
